# autodoc-directory-structure

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: test.yml
doc/: Makefile
doc/source/: conf.py  index.rst
src/autodoc_directory_structure/: README  __init__.py
src/tests/: README  conftest.py  test_directive.py
